# clamber-web-core

./: AXUM_KAFKA_GUIDE.md  Cargo.toml  KAFKA_TEST_GUIDE.md  PINGORA_PROXY_GUIDE.md  README.md  README_AXUM_INTEGRATION.md  README_PROXY_INTEGRATION.md  REDIS_TEST_GUIDE.md  USAGE.md
docs/: axum-kafka-integration.md  features.md  kafka-proxy-integration.md  kafka-usage.md  redis-connection-pool-limitations.md  redis-connection-pool.md  redis-custom-config.md
examples/: axum_kafka_config_example.rs  axum_kafka_consumer_config.yaml  axum_kafka_example.rs  axum_kafka_producer_config.yaml  kafka_consumer_config.yaml  kafka_example.rs  kafka_producer_config.yaml  kafka_proxy_config.yaml  kafka_proxy_example.rs  pingora_proxy_example.rs  redis_pool_example.rs  start_all_services.bat  start_all_services.sh  test_db.rs  test_proxy.bat  test_proxy.sh  test_redis.rs
src/: axum_integration.rs  lib.rs
src/database/: config.rs  connection.rs  database_connection.rs  database_error.rs  entities.rs  manager.rs  mod.rs
src/kafka/: axum_integration.rs  kafka_config.rs  kafka_consumer.rs  kafka_error.rs  kafka_producer.rs  mod.rs
src/proxy/: enhanced_proxy_server.rs  enhanced_proxy_service.rs  mod.rs  proxy_config.rs  proxy_server.rs  proxy_service.rs  simple_proxy_server.rs  simple_proxy_service.rs  static_file_service.rs
src/redis/: mod.rs  redis_config.rs  redis_connection.rs  redis_error.rs
static/: README.md  index.html
